--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
+  flutter_reaction_button: ^3.0.0+3
   go_router: ^14.8.1
   google_fonts: ^6.2.1
   image_picker: ^1.1.2
@@ -52,6 +53,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/img/logo_snap_story.png
+    - assets/icon/like.png
+    - assets/icon/love.png
+    - assets/icon/care.png
+    - assets/icon/haha.png
+    - assets/icon/wow.png
+    - assets/icon/like_default.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
   # For details regarding adding assets from package dependencies, see
