--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,10 @@ dependencies:
   flutter_reaction_button: ^3.0.0+3
   go_router: ^14.8.1
   google_fonts: ^6.2.1
+  http: ^1.3.0
   image_picker: ^1.1.2
   provider: ^6.1.2
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_lints: ^5.0.0
