--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,10 @@ dependencies:
   google_fonts: ^6.2.1
   http: ^1.3.0
   image_picker: ^1.1.2
+  lottie: ^3.3.1
   provider: ^6.1.2
   shared_preferences: ^2.5.2
+  timeago: ^3.7.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
@@ -61,6 +63,7 @@ flutter:
     - assets/icon/haha.png
     - assets/icon/wow.png
     - assets/icon/like_default.png
+    - assets/lottie/error_animation.json
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
   # For details regarding adding assets from package dependencies, see
