--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,10 @@ dependencies:
   go_router: ^14.8.1
   google_fonts: ^6.2.1
   http: ^1.3.0
+  image: ^4.5.3
   image_picker: ^1.1.2
   lottie: ^3.3.1
+  path_provider: ^2.1.5
   provider: ^6.1.2
   shared_preferences: ^2.5.2
   timeago: ^3.7.0
