--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,16 +9,21 @@ environment:
   sdk: ^3.7.0
 
 dependencies:
+  build_runner: ^2.4.15
   cached_network_image: ^3.4.1
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
   flutter_reaction_button: ^3.0.0+3
+  freezed: ^2.5.8
+  freezed_annotation: ^2.4.4
   go_router: ^14.8.1
   google_fonts: ^6.2.1
   http: ^1.3.0
   image: ^4.5.3
   image_picker: ^1.1.2
+  json_annotation: ^4.9.0
+  json_serializable: ^6.9.4
   lottie: ^3.3.1
   path_provider: ^2.1.5
   provider: ^6.1.2
