--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,10 @@ dependencies:
   flutter_reaction_button: ^3.0.0+3
   freezed: ^2.5.8
   freezed_annotation: ^2.4.4
+  geocoding: ^3.0.0
   go_router: ^14.8.1
   google_fonts: ^6.2.1
+  google_maps_flutter: ^2.12.0
   http: ^1.3.0
   image: ^4.5.3
   image_picker: ^1.1.2
