--- a/android/.gitignore
+++ b/android/.gitignore
@@ -4,7 +4,6 @@ gradle-wrapper.jar
 /gradlew
 /gradlew.bat
 /local.properties
-gradle.properties
 GeneratedPluginRegistrant.java
 .cxx/
 
@@ -13,3 +12,5 @@ GeneratedPluginRegistrant.java
 key.properties
 **/*.keystore
 **/*.jks
+android/app/src/main/res/values/secrets.xml
+
