--- a/ios/Runner/info.plist
+++ b/ios/Runner/info.plist
@@ -2,12 +2,22 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 	<dict>
+		<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+		<string>The app needs user's location permission</string>
+		<key>NSLocationAlwaysUsageDescription</key>
+		<string>The app needs user's location permission</string>
+		<key>NSLocationWhenInUseUsageDescription</key>
+		<string>The app needs location service permission</string>
 		<key>NSCameraUsageDescription</key>
 		<string>Enable this privacy setting to access the camera.</string>
 		<key>NSMicrophoneUsageDescription</key>
 		<string>Enable this privacy setting to access the microphone.</string>
 		<key>NSPhotoLibraryUsageDescription</key>
 		<string>Enable this privacy setting to access the photo gallery.</string>
+		<key>UIBackgroundModes</key>
+		<array>
+			<string>location</string>
+		</array>
 		<key>CFBundleDevelopmentRegion</key>
 		<string>$(DEVELOPMENT_LANGUAGE)</string>
 		<key>CFBundleDisplayName</key>
