--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   image_picker: ^1.1.2
   json_annotation: ^4.9.0
   json_serializable: ^6.9.4
+  location: ^8.0.0
   lottie: ^3.3.1
   path_provider: ^2.1.5
   provider: ^6.1.2
